[metadata]
name = fastapi-query-conditions
version = attr: fastapi_query_conditions.__version__
description = FastAPI-Query-Conditions is a dependency that parses a query string into conditions using operators enclosed in square brackets
author = Jonghwan Hyeon
author_email = jonghwanhyeon93@gmail.com
url = https://github.com/jonghwanhyeon/fastapi-query-conditions
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    fastapi
    query
    querystring
    condition
license = MIT
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
install_requires =
    fastapi
python_requires = >=3.7
packages = find: